@@ -64,8 +64,7 @@ import java.io.UnsupportedEncodingException;
 import java.util.Vector;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
-import org.apache.tools.ant.Task;
-import org.apache.tools.ant.taskdefs.Cvs;
+import org.apache.tools.ant.taskdefs.AbstractCvsTask;
 import org.apache.tools.ant.util.FileUtils;
 
 /**
@@ -101,9 +100,8 @@ import org.apache.tools.ant.util.FileUtils;
  * @version $Revision$ $Date$
  * @since Ant 1.5
  * @ant.task name="cvstagdiff"
- * @todo Why doesn't this task extend from AbstractCvsTask?
  */
-public class CvsTagDiff extends Task {
+public class CvsTagDiff extends AbstractCvsTask {
 
     /**
      * Token to identify a new file in the rdiff log
@@ -121,19 +119,9 @@ public class CvsTagDiff extends Task {
     static final String FILE_WAS_REMOVED = " is removed";
 
     /**
-     * The cvs task which will perform the rdiff.
-     */
-    private Cvs m_cvs;
-
-    /**
      * The cvs package/module to analyse
      */
     private String m_package;
-
-    /**
-     * The root directory in the rdiff output for the cvs package/module
-     */
-    private String m_rootDir;
 
     /**
      * The earliest tag from which diffs are to be included in the report.
@@ -166,89 +154,10 @@ public class CvsTagDiff extends Task {
     private FileUtils m_fileUtils = FileUtils.newFileUtils();
 
     /**
-     * Initialize this task.
-     * CvsTagDiff initializes a member cvs task in init() to perform the
-     * rdiff in execute().
-     *
-     * @exception BuildException if an error occurs
-     */
-    public void init() throws BuildException {
-        m_cvs = (Cvs) getProject().createTask("cvs");
-    }
-
-    /**
-     * If set to a value 1-9 it adds -zN to the cvs command line, else
-     * it disables compression.
-     *
-     * @see org.apache.tools.ant.taskdefs.AbstractCvsTask#setCompressionLevel(int)
-     */
-    public void setCompressionLevel(int level) {
-        m_cvs.setCompressionLevel(level);
-    }
-
-    /**
-     * If true, this is the same as compressionlevel="3".
-     */
-    public void setCompression(boolean usecomp) {
-        m_cvs.setCompression(usecomp);
-    }
-
-    /**
-     * The CVSROOT variable.
-     */
-    public void setCvsRoot(String cvsRoot) {
-        m_cvs.setCvsRoot(cvsRoot);
-    }
-
-    /**
-     * The CVS_RSH variable.
-     */
-    public void setCvsRsh(String rsh) {
-        m_cvs.setCvsRsh(rsh);
-    }
-
-    /**
      * The package/module to analyze.
      */
     public void setPackage(String p) {
         m_package = p;
-    }
-
-    /**
-     * The root directory for the package/module to analyze.
-     */
-    public void setRootDir(String dir) {
-        m_rootDir = dir;
-    }
-
-    /**
-     * If true, suppress informational messages.
-     */
-    public void setQuiet(boolean quiet) {
-        m_cvs.setQuiet(quiet);
-    }
-
-    /**
-     * Port used by CVS to communicate with the server.
-     */
-    public void setPort(int port) {
-        m_cvs.setPort(port);
-    }
-
-    /**
-     * Password file to read passwords from.
-     */
-    public void setPassfile(File f) {
-        m_cvs.setPassfile(f);
-    }
-
-    /**
-     * Stop the build process if the command exits with
-     * a return code other than 0.
-     * Defaults to false.
-     */
-    public void setFailOnError(boolean b) {
-        m_cvs.setFailOnError(b);
     }
 
     /**
@@ -312,15 +221,15 @@ public class CvsTagDiff extends Task {
             + (m_endTag != null ? ("-r " + m_endTag) : ("-D " + m_endDate))
             + " " + m_package;
         log("Cvs command is " + rdiff, Project.MSG_VERBOSE);
-        m_cvs.setCommand(rdiff);
+        setCommand(rdiff);
 
         File tmpFile = null;
         try {
             tmpFile = m_fileUtils.createTempFile("cvstagdiff", ".log", null);
-            m_cvs.setOutput(tmpFile);
+            setOutput(tmpFile);
 
             // run the cvs command
-            m_cvs.execute();
+            super.execute();
 
             // parse the rdiff
             CvsTagEntry[] entries = parseRDiff(tmpFile);
@@ -350,11 +259,20 @@ public class CvsTagDiff extends Task {
         try {
             reader = new BufferedReader(new FileReader(tmpFile));
 
-            String line = reader.readLine();
-            int headerLength = getHeaderLength(line);
+            // entries are of the form:
+            // File module/filename is new; current revision 1.1
+            // or
+            // File module/filename changed from revision 1.4 to 1.6
+            // or
+            // File module/filename is removed; not included in
+            // release tag SKINLF_12
 
-            int index;
+            // get rid of 'File module/"
+            int headerLength = 5 + m_package.length() + 1;
             Vector entries = new Vector();
+
+            String line = reader.readLine();
+            int index;
             CvsTagEntry entry = null;
 
             while (null != line) {
@@ -407,43 +325,6 @@ public class CvsTagDiff extends Task {
                 }
             }
         }
-    }
-
-    /**
-     * Return the size of the header from a given line that is the output
-     * from <tt>cvs rdiff -s ...</tt>.
-     * @param line the line of text containing the 'File module/filename is ...'
-     * @return the header length
-     */
-    private int getHeaderLength(String line) {
-        // entries are of the form:
-        // File module/filename is new; current revision 1.1
-        // or
-        // File module/filename changed from revision 1.4 to 1.6
-        // or
-        // File module/filename is removed; not included in
-        // release tag SKINLF_12
-
-        // get rid of 'File module/"
-        final boolean trimFileName = line.startsWith( "File " + m_package );
-
-        final int prefixLength = "File ".length();
-        int suffixLength = 0;
-        int rootDirLength = 0;
-
-        if (null != m_rootDir) {
-            // if root directory is set
-            rootDirLength = m_rootDir.length();
-            suffixLength = ( rootDirLength > 0 && m_rootDir.endsWith( "/" ) ) ? 1 : 0;
-        } else if (trimFileName) {
-            // if root directory wasn't set, and the rdiff output is of
-            // the format File module/filename
-            rootDirLength = m_package.length();
-            suffixLength = 1;
-        }
-
-        int headerLength = prefixLength + rootDirLength + suffixLength;
-        return headerLength;
     }
 
     /**
